# dr-gym

./: .gitignore  Dockerfile  README.md  app.py  bootstrap.sh  mkdocs.yml  model_metadata.json  pyproject.toml  requirements.txt  reward.py  run_cpu_training.sh  run_tensorboard.sh  train.py
configs/: default.yaml  quick.yaml
docs/: algorithms.md  arch-robustness-study-design.md  artifact-layout.md  car-openvino-benchmark-progress.md  code-map.md  configuration.md  contributing.md  deepracer-env-upgrade-handoff.md  eval-protocol.md  glossary.md  hpo.md  index.md  onnx-support-status.md  open-questions.md  perception-cnn-v1-training.md  physical-car-integration-notes.md  questions-for-maintainer.md  study-pipeline.md  system-overview.md  tensorboard.md  trace-contract.md  tracking.md  trainer-contract.md
docs/adr/: 0001-deployment-repo.md  0002-extend-existing-patterns.md  0003-versioned-contract-surface.md
docs/decisions/: 0004-orchestrator-refactor-interface.md
docs/reports/: architecture-review.md  asymmetric-architecture.md  camera-multicar-reset-storm.md  car-baseline.md  d3-hang-postmortem.md  deepracer-env-review.md  domain-randomization.md  evo-car-baseline.md  evo-car-test-plan.md  feature-based-policy.md  modernization-opportunities.md  multicar_throughput.md  oncar-engine-comparison.md  perception-hpo.md  perception-v1-mae.md  perception.md  q1-generalization.md  reward-search.md  ros2-gazebo-migration.md  safe-rl-backend.md  safety-gymnasium.md  scope-review.md  session-state-2026-06-29.md  status-2026-06-28.md  throughput.md
experiments/: _arch_lstm_repro.py  _bench_camera_ncars_lyrical.py  _bench_camera_train_lyrical.py  _bench_steps_lyrical.py  _prof_reset_lyrical.py  _prof_step_lyrical.py  _smoke_camera_lyrical.py  _smoke_camera_storm_lyrical.py  _smoke_lyrical.py  _smoke_multicar_lyrical.py  _smoke_recorder_lyrical.py  _smoke_train_lyrical.py  camera_cnn_dataset.py  custom_trainer_example.py  end_to_end_ppo.py  feature_dr_multicar.py  feature_dr_training.py  hpo_example.py  multicar_demo.py  object_avoidance_hpo.py  oracle_asym_multicar.py  oracle_asym_robust.py  oracle_feature_study.py  oracle_hpo.py  ordered_split_example.py  p1p3_validation.py  perception_capture_heldout.py  perception_cnn_v1_training.ipynb  perception_hpo.py  phase2_from_search.py  reward_search.py  time_trail_hard_track.py  time_trial_earlystop.py  time_trial_train.py  trace_smoke_study.py  train_perception.py
gym_dr/: __init__.py  action_space.py  app.py  asymmetric.py  cli.py  config.py  costs.py  data_store.py  docker_runner.py  domain_randomization.py  early_stopping.py  environment.py  evaluate.py  export.py  extractors.py  hpo.py  metrics.py  mlflow_utils.py  networks.py  object_avoidance.py  optimize.py  perception.py  perception_data.py  perception_recorder.py  pipeline.py  randomization.py  reward.py  rewards.py  search.py  seeding.py  setup_profile.py  study.py  trace.py  tracks.py  trainer.py  worlds.py
gym_dr/analysis/: __init__.py  diagnostics.py
gym_dr/envs/: __init__.py  deepracer.py  dispatch.py  feature_obs.py  multi_car.py  time_trial.py  wrappers.py
gym_dr/trainers/: __init__.py  base.py  fsrl_trainer.py
gym_dr/trainers/sb3/: __init__.py  algorithms.py  callbacks.py  plots.py
notebooks/: trace_analysis.ipynb
notebooks/.ipynb_checkpoints/: trace_analysis-checkpoint.ipynb
scripts/: _ir_runner.py  _ort_runner.py  aggregate_eval.py  bag_to_perception.py  car_ov_bench.py  clean_artifacts.sh  collect_perception_all.sh  collect_perception_data.py  collect_sim_obs.py  eval_physical_tracks.py  evaluate.py  export_bundle.py  multicar_throughput.py  optimized_setup.py  perception_offload.py  precision_experiment.py  random_baseline.py  reward_ranking.py  scripted_baseline.py  smoke_test_1_pipeline.py  smoke_test_2_parity.py  throughput_benchmark.py  track_geometry.py  validate_fsrl_safetygym.py
scripts/oncar/: bench_engines.py  bench_evo.py  bench_model_sizes.py  install_engines.sh  make_models.py
tests/: test_acl.py  test_action_normalization.py  test_bag_to_perception.py  test_clean_completion.py  test_costs.py  test_data_store.py  test_diagnostics.py  test_docker_teardown.py  test_domain_randomization.py  test_early_stopping.py  test_env_contract.py  test_environment.py  test_eval_plots.py  test_evaluate.py  test_export.py  test_extractors.py  test_multi_car_vecenv.py  test_multicar_dispatch.py  test_networks.py  test_optimize.py  test_perception.py  test_pipeline.py  test_reward_metrics_callback.py  test_rewards.py  test_search.py  test_seeding.py  test_setup_profile.py  test_smoke.py  test_stochastic_curriculum.py  test_study.py  test_trace.py  test_trainer_toolkit.py  test_watchdog.py  test_worlds.py
tmp/: sim_obs.npz
