[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-dr"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
  "stable-baselines3>=2.3",
  "tensorboard",
  "mlflow>=2.10",
  "optuna>=3.5",
  "gymnasium",
]

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.setuptools]
packages = ["gym_dr"]
