[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-dr"
version = "0.3.0"
# Lower bound matches the simapp container (Python 3.8) so the host test
# suite can run on 3.8 and catch regressions that would crash in-container.
# No upper bound — host can still be newer if you want; `.python-version`
# picks 3.8 on a fresh `uv sync`.
requires-python = ">=3.8"
dependencies = [
  # Base constraints — let uv resolve the latest on a modern host.
  "stable-baselines3>=2.3",
  "tensorboard",
  "mlflow>=2.10",
  "optuna>=3.5",
  "gymnasium",
  # Tier-1 trace sink (gym_dr/trace.py) writes Parquet step traces.
  "pandas",
  "pyarrow",
  # On Python 3.8 (the simapp container), cap each dep at the last major
  # that still ships 3.8 wheels. On 3.9+ these constraints are inert and
  # uv picks the latest as before.
  "stable-baselines3<2.4; python_version<'3.9'",
  "torch<2.5;             python_version<'3.9'",
  "tensorboard<2.16;      python_version<'3.9'",
  "mlflow<2.17;           python_version<'3.9'",
  "optuna<4;              python_version<'3.9'",
  "gymnasium<1.0;         python_version<'3.9'",
]

[dependency-groups]
# Host-side analysis of the Tier-1 trace. deepracer-utils (from GitHub) brings
# the gym-trace loader, track-path plots, and rliable analysis; its [gym] extra
# adds pyarrow and [rliable] adds rliable. boto3/shapely come transitively.
analysis = [
    "deepracer-utils[gym,rliable]",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.8",
    "nbformat>=5.10.4",
]
dev = [
  "pytest>=8",
  "onnx>=1.15",
  "onnxscript>=0.1",
  # onnxscript >=0.2 uses runtime PEP 585 subscripting that crashes on
  # Python 3.8 — keep the simapp-3.8 host on the 0.1.x line.
  "onnxscript<0.2; python_version<'3.9'",
]
# ONNX -> OpenVINO IR conversion + smoke-test runtimes (see gym_dr/optimize.py and
# scripts/smoke_test_{1,2}_*.py). These do NOT go in the main env: the device-accurate
# legacy OpenVINO 2021.4 toolchain pins NumPy 1.19, which conflicts with tensorflow's
# newer NumPy. So the smoke tests use TWO dedicated venvs, created with uv:
#
#   # modern toolchain (ovc / openvino.convert_model) + TF reference + onnxruntime:
#   uv venv .venv-ov-modern --python 3.8
#   uv pip install --python .venv-ov-modern/bin/python \
#       openvino onnxruntime "tensorflow~=2.13.0" tf2onnx pytest
#
#   # legacy device toolchain (OpenVINO 2021.4 `mo` + Inference Engine):
#   uv venv .venv-ov-legacy --python 3.8
#   uv pip install --python .venv-ov-legacy/bin/python \
#       "openvino-dev==2021.4.2" "tokenizers==0.10.3" "onnx==1.11.0" "protobuf==3.19.6"
#
# Versions resolved on py3.8: openvino 2024.4 / onnxruntime 1.19.2 / tensorflow 2.13.1 /
# tf2onnx 1.16.1 (modern); openvino 2021.4.2 (legacy). The tokenizers/onnx/protobuf pins
# work around legacy openvino-dev's outdated transitive deps on py3.8.
optimize = [
  "onnx>=1.15",
  "onnxruntime>=1.16",
  "openvino>=2024",
  "tensorflow~=2.13.0",
  "tf2onnx>=1.16",
]

[tool.uv]
# `dev` and `optimize` are mutually exclusive: onnxscript (dev) needs
# typing-extensions>=4.10, while tensorflow~=2.13 (optimize) caps it <4.6.
# They were never meant to share an env — optimize lives in its own venvs
# (see the comment on the optimize group above). Declaring the conflict lets
# uv resolve them in separate forks so the universal lock succeeds and
# `uv run` (default `dev` group only) works.
conflicts = [
  [{ group = "dev" }, { group = "optimize" }],
]

[tool.uv.sources]
# Install deepracer-utils from the project owner's GitHub. Pin a branch so
# `uv lock` records the resolved commit; switch `branch` to `rev = "<sha>"` to
# pin an exact commit.
deepracer-utils = { git = "https://github.com/Luna-v0/deepracer-utils.git", branch = "master" }

[tool.setuptools]
packages = ["gym_dr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end/integration tests; deselect with -m 'not slow'",
    "requires_sim: needs a running DeepRacer/Gazebo simulator; skipped where none is available",
]
